--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A blazing fast REST APIs with Node.js, MongoDB, Fastify and Swagger.",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/nodemon/bin/nodemon.js ./src/index.js"
   },
   "author": "Siegfried Grimbeek <siegfried.grimbeek@gmail.com> (www.siegfriedgrimbeek.co.za)",
   "license": "ISC",
